--- a/newsfragments/696.bugfix.rst
+++ b/newsfragments/696.bugfix.rst
@@ -1,5 +1,5 @@
 Add timeout to:
-1. multiselect handshake
+1. multiselect handshake in multiselect_client.py and multiselect.py
 2. query_multistream_command
 3. try_select
 to prevent indefinite hangs when a remote peer does not respond.
